--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duplex Imposer - A4 to A5 PDF Rearranger</title>
+    <title>Duplex Imposer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="importmap">
     {
       "imports": {
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-        "pdf-lib": "https://esm.sh/pdf-lib@^1.17.1"
+        "react": "https://esm.sh/react@19.2.3",
+        "react-dom": "https://esm.sh/react-dom@19.2.3",
+        "lucide-react": "https://esm.sh/lucide-react",
+        "pdf-lib": "https://esm.sh/pdf-lib"
       }
     }
     </script>
-    <link rel="stylesheet" href="./index.css">
   </head>
-  <body class="bg-slate-50 text-slate-900 min-h-screen">
+  <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
