--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duplex Imposer</title>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script async src="https://ga.jspm.io/npm:es-module-shims@1.10.1/dist/es-module-shims.js"></script>
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@19.2.3",
-        "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
-        "lucide-react": "https://esm.sh/lucide-react",
-        "pdf-lib": "https://esm.sh/pdf-lib"
-      }
-    }
-    </script>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
+  </head>
+  <body class="bg-slate-50 text-slate-900 min-h-screen">
     <div id="root"></div>
-    <script type="text/babel" data-type="module">
-        import React from 'react';
-        import ReactDOM from 'react-dom/client';
-        
-        // This links to your actual logic file
-        import App from './App.tsx';
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
+    <script type="module" src="./index.tsx"></script>
+  </body>
 </html>
