--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Duplex Imposer</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-slate-50 text-slate-900 min-h-screen">
+  <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
