--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duplex Imposer</title>
+    <title>Duplex Studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-slate-50 text-slate-900 min-h-screen">
+  <body>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
